[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "bot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
Pillow = "^8.3.1"
asyncpraw = "^7.4.0"
discord = "^1.7.3"
python = "^3.8"
youtube-search-python = "^1.4.6"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
google-auth-oauthlib = "^0.4.5"
google-api-python-client = "^2.15.0"
[tool.poetry.dev-dependencies]
